[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/see_saw.gd" type="Script" id=1]
[ext_resource path="res://textures/see_saw.png" type="Texture" id=2]
[ext_resource path="res://textures/level_button_v1.png" type="Texture" id=3]
[ext_resource path="res://audio/sounds/swosh.wav" type="Sample" id=4]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 8.24993
height = 78.5549

[sub_resource type="Animation" id=2]

resource/name = "leftdown_to_level"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("left_hinge:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("left_hinge/right_hinge:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 45.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("block_left:collision/layers")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("block_left:collision/mask")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]

resource/name = "level_to_leftdown"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("left_hinge:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("left_hinge/right_hinge:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("block_left:collision/layers")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("block_left:collision/mask")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=4]

resource/name = "level_to_rightdown"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("left_hinge:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("left_hinge/right_hinge:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("block_left:collision/layers")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("block_left:collision/mask")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=5]

resource/name = "rightdown_to_level"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("left_hinge:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ -45.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("left_hinge/right_hinge:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("block_left:collision/layers")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("block_left:collision/mask")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 3.57456, 7.98631 )

[sub_resource type="SampleLibrary" id=7]

samples/swosh = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[node name="see_saw" type="Node2D"]

script/script = ExtResource( 1 )

[node name="left_hinge" type="Node2D" parent="."]

[node name="right_hinge" type="Node2D" parent="left_hinge"]

transform/pos = Vector2( 79.7184, 0 )

[node name="body" type="KinematicBody2D" parent="left_hinge/right_hinge" groups=[
"jump_surfaces",
"platforms",
]]

transform/pos = Vector2( -39.8424, 0 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( -0.0006458, -1, 1.00495, -0.000648997, 0, 0.113834 )
shapes/0/trigger = false
collision/layers = 3
collision/mask = 1
collision/margin = 0.08

[node name="sprite" type="Sprite" parent="left_hinge/right_hinge/body"]

texture = ExtResource( 2 )

[node name="collision_box" type="CollisionShape2D" parent="left_hinge/right_hinge/body"]

transform/pos = Vector2( 0, 0.113834 )
transform/rot = 90.037
transform/scale = Vector2( 1, 1.00495 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/leftdown_to_level = SubResource( 2 )
anims/level_to_leftdown = SubResource( 3 )
anims/level_to_rightdown = SubResource( 4 )
anims/rightdown_to_level = SubResource( 5 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="btn_left" type="TextureButton" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -15.0
margin/top = -23.0
margin/right = 31.0
margin/bottom = 65.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="btn_right" type="TextureButton" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = -23.0
margin/right = 80.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="block_left" type="StaticBody2D" parent="." groups=[
"jump_surfaces",
]]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -4.49792, 0.128513 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="collision_shape" type="CollisionShape2D" parent="block_left"]

transform/pos = Vector2( -4.49792, 0.128513 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="block_right" type="StaticBody2D" parent="." groups=[
"jump_surfaces",
]]

input/pickable = false
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 84.138, 0.128513 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="collision_shape" type="CollisionShape2D" parent="block_right"]

transform/pos = Vector2( 84.138, 0.128513 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="sample_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 7 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


